# final_stop-shop

./: .gitignore
shopapi/: db.sqlite3  pyproject.toml
shopapi/shop/: admin.py  models.py  serializers.py  urls.py  views.py
shopapi/shop/migrations/: 0001_initial.py  0002_auto_20201017_1809.py  0002_shop_owner.py  0003_auto_20201017_1814.py  0004_auto_20201017_1815.py
shopapi/shop_api/: permissions.py  serializers.py  urls.py  views.py
shopapi/shop_project/: settings.py  urls.py
shopapi/users/: admin.py  serializers.py  urls.py
shopapi/users/migrations/: 0001_initial.py  0002_auto_20201017_1738.py
stop_and_shop/: package-lock.json  package.json
stop_and_shop/src/: App.css  App.js  axios.js  goods_1.js  index.js  service_1.js
stop_and_shop/src/components/: Header.js  goods.js  login.js  search.js  service.js
stop_and_shop/src/components/admin/: create.js  edit.js
stop_and_shop/src/css/: style.css
